--- a/LearningCSS/styles.css
+++ b/LearningCSS/styles.css
@@ -58,3 +58,39 @@ body h1+p .special {
     padding: 5px;
 }
 
+p1{
+    color: red;
+}
+
+.special{
+    color: blue;
+}
+
+.outer {
+    border: 5px solid black;
+}
+  
+.box {
+    padding: 10px;
+    width: calc(90% - 30px);
+    background-color: rebeccapurple;
+    color: white;
+}
+
+.box {
+    margin: 30px;
+    width: 100px;
+    height: 100px;
+    background-color: rebeccapurple;
+    transform: rotate(0.8turn)
+}
+
+body {
+    background-color: pink;
+}
+  
+@media (min-width: 100em) {
+    body {
+        background-color: blue;
+    }
+}
