--- a/LearningCSS/styles.css
+++ b/LearningCSS/styles.css
@@ -95,3 +95,34 @@ body {
     }
 }
 
+body {
+    font: 1em/150% Helvetica, Arial, sans-serif;
+    padding: 1em;
+    margin: 0 auto;
+    max-width: 33em;
+}
+
+@media (min-width: 70em) {
+    body {
+        font-size: 130%;
+    }
+}
+
+h1 {
+    font-size: 1.5em;
+}
+
+div p,
+#id:first-line {
+    background-color: red;
+    font-style: none
+}
+
+div p {
+    margin: 0;
+    padding: 1em;
+}
+
+div p+p {
+    padding-top: 0;
+}
