--- a/ResponsiveWebDesign/css/styles.css
+++ b/ResponsiveWebDesign/css/styles.css
@@ -2,11 +2,29 @@ h1, h2, p {
     text-align: center;
 }
 
-/*body {
-    background-color: burlywood;
-}*/
+body {
+    /* background-color: burlywood; */
+    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+}
 
-div {
-    width: 300px;
+.menu {
+    /* width: 300px; */
+    width: 80%;
     background-color: burlywood;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.flavor{
+    text-align: left;
+    width: 50%;
+}
+
+.price {
+    text-align: right;
+    width: 50%;
+}
+
+.item {
+    display: inline-block;
 }
