--- a/ResponsiveWebDesign/css/styles.css
+++ b/ResponsiveWebDesign/css/styles.css
@@ -13,16 +13,20 @@ body {
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.flavor{
+.flavor, .dessert{
     text-align: left;
-    width: 50%;
+    width: 75%;
 }
 
 .price {
     text-align: right;
-    width: 50%;
+    width: 25%;
 }
 
 .item {
