--- a/ResponsiveWebDesign/css/styles.css
+++ b/ResponsiveWebDesign/css/styles.css
@@ -10,6 +10,10 @@ body {
     font-family: sans-serif;
 }
 
+.established {
+    font-style: italic;
+}
+
 .menu {
     /* width: 300px; */
     width: 80%;
