feat: setting hr and anchor to link

--- a/ResponsiveWebDesign/css/styles.css
+++ b/ResponsiveWebDesign/css/styles.css
@@ -22,6 +22,12 @@ body {
     font-style: italic;
 }
 
+hr {
+    height: 3px;
+    background-color: brown;
+    border-color: brown;
+}
+
 .menu {
     /* width: 300px; */
     width: 80%;
