feat: bigger space at title 25px

--- a/ResponsiveWebDesign/css/styles.css
+++ b/ResponsiveWebDesign/css/styles.css
@@ -29,6 +29,10 @@ hr {
     border-color: brown;
 }
 
+.bottom-line {
+    margin-top: 25px;
+}
+
 .menu {
     /* width: 300px; */
     width: 80%;
